--- a/resources/html/recent.html
+++ b/resources/html/recent.html
@@ -7,17 +7,10 @@
 </head>
 <body>
 <h1>Recently Added Releases</h1>
-{% for rel in releases %}
-<div class="rel">
-    <div class="relart"><img src="/release-art/{{rel.id}}" width="210" height="210"></div>
-    <div class="relinfo">
-        <a href="/release/{{rel.id}}">{{rel.title}}</a><br>
-        {% if rel.artist %}<a href="/artist/{{rel.artist.id}}">{{rel.artist.name}}</a><br>{% endif %}
-        Released: {{rel.released}}<br>
-        {% if rel.label %}Label: {{rel.label}}<br>{% endif %}
-        {% if rel.catalog %}Catalog: {{rel.catalog}}{% endif %}
-    </div>
+<div class="rellist">
+    {% for rel in releases %}
+    {% include "release-item.html" %}
+    {% endfor %}
 </div>
-{% endfor %}
 </body>
 </html>
