--- a/resources/html/release.html
+++ b/resources/html/release.html
@@ -6,19 +6,26 @@
     {% style "/css/screen.css" %}
 </head>
 <body>
-<div class="relart"><img src="/release-art/{{release.id}}" width="450" height="450"></div>
-<h1>{{release.title}}</h1>
-<a href="/artist/{{release.artist.id}}">{{release.artist.name}}</a><br>
-Released: {{release.released}}<br>
-{% if release.label %}Label: {{release.label}}<br>{% endif %}
-{% if release.catalog %}Catalog: {{release.catalog}}{% endif %}
-{% for media in release.medias %}
-<h3>{{media.name}}{% if media.title %} {{media.title}}{% endif %}</h3>
-{% for track in media.tracks %}
-<div class="track">
-    {{track.side}}-{{track.number|number-format:%02d}} {{track.title}}
+<div class="release">
+    <div class="relart"><img src="/release-art/{{release.id}}"></div>
+    <div class="relinfo">
+        <h1>{{release.title}}</h1>
+        <p>by <a href="/artist/{{release.artist.id}}">{{release.artist.name}}</a></p>
+        <p>{{release.media-descr}}</p>
+        <p>Released: {{release.released}}</p>
+        {% if release.label %}<p>Label: {{release.label}}</p>{% endif %}
+        {% if release.catalog %}<p>Catalog: {{release.catalog}}</p>{% endif %}
+    </div>
 </div>
-{% endfor %}
-{% endfor %}
+<div class="tracks">
+    {% for media in medias %}
+    <h1>{{media.name}}{% if media.title %} {{media.title}}{% endif %}</h1>
+    <div class="tracklist">
+        {% for track in media.tracks %}
+        <p>{{track.side}}-{{track.number|number-format:%02d}} {{track.title}}</p>
+        {% endfor %}
+    </div>
+    {% endfor %}
+</div>
 </body>
 </html>
