--- a/resources/html/release.html
+++ b/resources/html/release.html
@@ -6,6 +6,7 @@
     {% style "/css/screen.css" %}
 </head>
 <body>
+{% include "navbar.html" %}
 <div class="release">
     <div class="relart"><img src="/release-art/{{release.id}}"></div>
     <div class="relinfo">
