--- a/resources/html/recent.html
+++ b/resources/html/recent.html
@@ -6,6 +6,7 @@
     {% style "/css/screen.css" %}
 </head>
 <body>
+{% include "navbar.html" %}
 <h1>Recently Added Releases</h1>
 <div class="rellist">
     {% for rel in releases %}
