add artist search, appears on and comp artist disp

--- a/resources/html/navbar.html
+++ b/resources/html/navbar.html
@@ -1,6 +1,7 @@
 <div class="navbar">
     <h1><a href="/">Peter's Music</a></h1>
-    <form>
-        <input type="text" id="artist">
-    </form>
+    <input type="text" id="artist-search" accesskey="f" placeholder="find Artist">
 </div>
+<script>
+    pjmusic.core.init_navbar();
+</script>
