--- a/resources/html/recent.html
+++ b/resources/html/recent.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Peter's Music</title>
-    {% style "/css/screen.css" %}
-</head>
+{% include "head.html" %}
 <body>
 {% include "navbar.html" %}
 <h1>Recently Added Releases</h1>
