--- a/resources/html/artist.html
+++ b/resources/html/artist.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Peter's Music</title>
-    {% style "/css/screen.css" %}
-</head>
+{% include "head.html" %}
 <body>
 {% include "navbar.html" %}
 <h1>{{artist.name}}</h1>
@@ -13,5 +9,13 @@
     {% include "release-item.html" %}
     {% endfor %}
 </div>
+{% if not appears-on|empty? %}
+<h2>Appears on</h2>
+<div class="rellist">
+    {% for rel in appears-on %}
+    {% include "release-item.html" %}
+    {% endfor %}
+</div>
+{% endif %}
 </body>
 </html>
