--- a/resources/html/head.html
+++ b/resources/html/head.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Peter's Music</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     {% style "/css/screen.css" %}
     {% style "/css/jquery-ui.css" %}
     {% script "/js/app.js" %}
